--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@react-three/fiber": "^8.15.15",
     "@types/three": "^0.160.0",
     "glsl-random": "^0.0.5",
+    "leva": "^0.9.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^0.160.1"
+    "three": "^0.160.1",
+    "three-stdlib": "^2.30.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
